--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>JS Star Parallax</title>
+		<title>Asteroids Game</title>
 		<meta charset="utf-8" />
 	</head>
 	<body>
