Further Restructuring, Start Menu, Movement Optimization

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		<div id="wrapper" style="display:flex; align-items: center; justify-content: center;">
 			<div id="gameCanvasContainer"></div>
 		</div>
-		<script type="text/javascript" src="game.js"></script>
+		<script type="module" src="src/main.js"></script>
 	</body>
 </html>
